<resources>

    <string name="info_dialog_message">Android 7.0 added new permission called RUN_IN_BACKGROUND, which can block background behavior of apps. However this permission is fully hidden and there\'s no way to activate it besides using adb commands. \n\nThis app is for those, who don\'t want to mess with adb shell and input commands manually and prefer to just click on app name to enable/disable it from running in the background. As android apps are not allowed to mess with other apps\' permissions, this app requires root to overcome this issue. \n\nFor more detailed information check app\'s github repo.</string>
    <string name="loading_dialog_message">Checking root status, loading list of apps and retrieving their RUN_IN_BACKGROUND state…</string>
    <string name="loading_dialog_title">Loading…</string>

    <string name="button_close_dialog">Close dialog</string>
    <string name="button_open_github">Open github</string>
    <string name="button_open_information">information</string>

    <string name="message_there_was_error">There was error setting</string>
    <string name="message_to">to</string>
    <string name="message_was_set_to">set to</string>

    <string name="message_allow">allow</string>
    <string name="message_ignore">restrict</string>

    <string name="app_name">BackgroundRestrictor</string>

    <string name="action_search">Search</string>

    <string name="action_sort">Sort</string>
    <string name="action_sort_name">by name</string>
    <string name="action_sort_package">by package</string>
    <string name="action_sort_disabled_first">by restricted first</string>
    <string name="search_hint">Enter app name or package…</string>

</resources>
