<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_info"
        android:title="@string/button_open_information"
        android:icon="@drawable/information"
        app:showAsAction="always" />

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/action_sort_name" />
            <item
                android:id="@+id/action_sort_package"
                android:title="@string/action_sort_package" />
            <item
                android:id="@+id/action_sort_disabled_first"
                android:title="@string/action_sort_disabled_first" />
        </menu>
    </item>

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/magnify"
        app:showAsAction="always" />

</menu>